fixed overflow and spelling

--- a/index.css
+++ b/index.css
@@ -7,13 +7,14 @@ body {
     width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     width: 100%;
     height: 100%;
     font-family: 'Inter', sans-serif;
+}
 
-
+#container{
+    margin: auto;
 }
 
 header {
